ipc/ipdl/test/ipdl/ok/Pempty.ipdl
protocol Pempty {
child: async Msg();
};
